syntax = "proto3";
package clusters;

option go_package = "pkg/rpc/clusters";

service Clusters {
    rpc ListContexts (ListContextsReq) returns (ListContextsRes);
    rpc ListNamespacesForContext (ListNamespacesForContextReq) returns (ListNamespacesForContextRes);
    rpc ListKustomizations (ListKustomizationsReq) returns (ListKustomizationsRes);
    rpc ListSources (ListSourcesReq) returns (ListSourcesRes);
    rpc SyncKustomization (SyncKustomizationReq) returns (SyncKustomizationRes);
    rpc ListHelmReleases (ListHelmReleasesReq) returns (ListHelmReleasesRes);
    rpc ListWorkloads (ListWorkloadsReq) returns (ListWorkloadsRes);
    rpc ListEvents (ListEventsReq) returns (ListEventsRes);
}

message Context {
    string name = 1;
}

message ListContextsReq {

}

message ListContextsRes {
    string currentContext = 1;
    repeated Context contexts = 2;
}

message ListNamespacesForContextReq {
    string contextName = 1;
}

message ListNamespacesForContextRes {
    repeated string namespaces = 1;
}

message Condition {
    string type = 1;
    string status = 2;
    string reason = 3;
    string message = 4;
    string timestamp = 5;
}

message ObjectRef {
    string name = 1;
    string namespace = 2;
    string apiversion = 3;
    string kind = 4;
}

message Decryption {
    string provider = 1;
    ObjectRef secretref = 2;
}

message Kustomization {
    // meta
    string name = 1;
    string namespace = 2;
    // spec
    repeated ObjectRef dependson = 3;
    Decryption decryption = 4;
    string interval = 5;
    string kubeconfig = 6;
    string path = 7;
    bool prune = 8;
    repeated ObjectRef healthchecks = 9;
    string serviceaccountname = 10;
    ObjectRef sourceref = 11;
    bool suspend = 12;
    string targetNamespace = 13;
    string timeout = 14;
    // status
    repeated Condition conditions = 15;
    string reconcileRequestAt = 16;
    string reconcileAt = 17;
}

message ListKustomizationsReq {
    string contextName = 1;
    string namespace = 2;
}

message ListKustomizationsRes {
    repeated Kustomization kustomizations = 1;
}


message GitRepositoryRef {
    string branch = 1;
    string tag = 2;
    string semver = 3;
    string commit = 4;
}

message Artifact {
    string checksum  = 1;
    int32 lastupdateat = 2;
    string path = 3;
    string revision = 4;
    string url = 5;
}

message Source {
    string name = 1;
    string url = 2;
    GitRepositoryRef reference = 3;
    enum Type {
        Git = 0;
        Bucket = 1;
        Helm = 2;
        Chart = 3;
    };
    Type type = 4;
    string provider = 5;
    string bucketname = 6;
    string region = 7;
    string namespace = 8;
    string gitimplementation = 9;
    string timeout = 10;
    string secretRefName = 11;
    repeated Condition conditions = 12;
    Artifact artifact = 13;
}

message ListSourcesReq {
    string contextName = 1;
    string namespace = 2;
    Source.Type sourceType = 3;
}

message ListSourcesRes {
    repeated Source sources  = 1;
}

message SyncKustomizationReq {
    string contextName = 1;
    string namespace = 2;
    string kustomizationName = 3;
    bool withSource = 4;
}

message SyncKustomizationRes {
    Kustomization kustomization = 1;
}

message HelmRelease {
    string name = 1;
    string namespace = 2;
    string interval = 3;
    string chartName = 5;
    string version = 6;
    string sourceKind = 7;
    string sourceName  = 8;
    string sourceNamespace = 9;
    repeated Condition conditions = 12;
}

message ListHelmReleasesReq {
    string contextName = 1;
    string namespace = 2;
}

message ListHelmReleasesRes {
    repeated HelmRelease helm_releases = 1;
}

message Container {
    string name = 1;
    string image = 2;
}

message PodTemplate {
    repeated Container containers = 1;
}

message Workload {
    string name = 1;
    string namespace = 2;
    string kustomizationRefName = 3;
    string kustomizationRefNamespace = 4;
    PodTemplate podTemplate = 5;
}

message ListWorkloadsReq {
    string contextName = 1;
    string namespace = 2;
}

message ListWorkloadsRes {
    repeated Workload workloads = 1;
}

message ListKustomizationChildrenReq {
    string contextName = 1;
    string kustomizationName = 2;
    string KustomizationNamespace = 3;
}

message ListKustomizationChildrenRes {
    repeated Workload workloads = 1;
}

message Event {
    string type = 1;
    string reason = 2;
    string message = 3;
    int32 timestamp = 4;
    string source = 5;
}

message ListEventsReq {
    string contextName = 1;
    string namespace = 2;
}

message ListEventsRes {
    repeated Event events = 1;
}
